--- a/example/helixdb-cfg/config.hx.json
+++ b/example/helixdb-cfg/config.hx.json
@@ -1,4 +1,3 @@
-
 {
     "vector_config": {
         "m": 16,
@@ -8,5 +7,10 @@
     "graph_config": {
         "secondary_indices": []
     },
-    "db_max_size_gb": 10
+    "db_max_size_gb": 10,
+    "mcp": true,
+    "bm25": true,
+    "embedding_model": "text-embedding-ada-002",
+    "graphvis_node_label": ""
 }
+
